# openssl_for_ios_and_android

./: .gitignore  README.md
.github/workflows/: ci.yml
android-ndk-r21d/: NOTICE  NOTICE.toolchain  source.properties
android-ndk-r21d/meta/: abis.json  platforms.json  system_libs.json
android-ndk-r21d/prebuilt/android-arm/gdbserver/: gdbserver
android-ndk-r21d/prebuilt/android-arm64/gdbserver/: gdbserver
android-ndk-r21d/prebuilt/android-x86/gdbserver/: gdbserver
android-ndk-r21d/prebuilt/android-x86_64/gdbserver/: gdbserver
android-ndk-r21d/prebuilt/linux-x86_64/include/: libyasm-stdint.h
android-ndk-r21d/prebuilt/linux-x86_64/lib/: libc++abi.so.1
android-ndk-r21d/shader-tools/linux-x86_64/: spirv-as  spirv-cfg  spirv-dis  spirv-link  spirv-opt  spirv-reduce  spirv-val
android-ndk-r21d/simpleperf/: ChangeLog  annotate.py  api_profiler.py  app_profiler.py  binary_cache_builder.py  debug_unwind_reporter.py  pprof_proto_generator.py  report.py  report_html.js  report_html.py  report_sample.py  run_simpleperf_on_device.py  run_simpleperf_without_usb_connection.py  simpleperf_report_lib.py  utils.py
android-ndk-r21d/simpleperf/app_api/cpp/: simpleperf.cpp  simpleperf.h
android-ndk-r21d/simpleperf/doc/: README.md  android_application_profiling.md  android_platform_profiling.md  executable_commands_reference.md  report_html.html  scripts_reference.md  trace_offcpu.html
android-ndk-r21d/simpleperf/inferno/: data_types.py  inferno.py  svg_renderer.py
android-ndk-r21d/sources/android/support/: Android.mk
android-ndk-r21d/sources/cxx-stl/llvm-libc++/: Android.mk
android-ndk-r21d/sources/cxx-stl/llvm-libc++abi/: Android.mk
android-ndk-r21d/sysroot/: NOTICE
android-ndk-r21d/sysroot/usr/include/: assert.h  byteswap.h  cpio.h  ctype.h  dirent.h  elf.h  endian.h  error.h  fcntl.h  getopt.h  glob.h  ifaddrs.h  libgen.h  link.h  math.h  memory.h  paths.h  pthread.h  pty.h  search.h  semaphore.h  setjmp.h  signal.h  string.h  syscall.h  sysexits.h  tar.h  time.h  wait.h  wchar.h
example/android/: .gitignore.txt  README.md
example/android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
example/android/demo2/test_curl_with_ssl_and_http2_android/: settings.gradle
example/android/demo2/test_curl_with_ssl_and_http2_android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
example/android/demo2/test_curl_with_ssl_and_http2_android/app/src/main/cpp/test/: certificate.h  test_http2.cpp  test_http2.hpp
example/android/demo2/test_curl_with_ssl_and_http2_android/app/src/main/cpp/test/include/openssl/: opensslconf.h
example/android/gradle/wrapper/: gradle-wrapper.properties
example/android/test_cpphttplib_for_app_on_android/app/: build.gradle
example/android/test_cpphttplib_for_app_on_android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
example/android/test_cpphttplib_for_app_on_android/app/src/main/cpp/http/: test_http.cpp
example/ios/: README.md
example/ios/test_cpphttplib_by_app/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.mm  main.m
example/ios/test_cpphttplib_by_app.xcodeproj/: project.pbxproj
example/ios/test_cpphttplib_by_app.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
example/ios/test_cpphttplib_by_app/http/: httplib copy.h  test_http.cpp  test_http.hpp
example/ios/test_cpphttplib_by_appTests/: test_cpphttplib_by_appTests.m
include/openssl/: opensslconf.h
output/android/curl-android-armeabi/lib/: libcurl.la
output/android/curl-android-mips/lib/: libcurl.la
output/android/curl-android-mips64/lib/: libcurl.la
output/android/curl-android-x86/lib/: libcurl.la
output/android/curl-android-x86_64/lib/: libcurl.la
output/android/curl-x86/lib/: libcurl.la
output/android/nghttp2-x86/lib/: libnghttp2.la
output/android/openssl-android-arm64-v8a/lib/: libcrypto.so.1.1  libssl.so.1.1
output/android/openssl-android-armeabi-v7a/lib/: libcrypto.so.1.1  libssl.so.1.1
output/android/openssl-android-armeabi/lib/: libcrypto.so.1.1  libssl.so.1.1
output/android/openssl-android-mips/lib/: libcrypto.so.1.1  libssl.so.1.1
output/android/openssl-android-mips64/lib/: libcrypto.so.1.1  libssl.so.1.1
output/android/openssl-android-x86/lib/: libcrypto.so.1.1  libssl.so.1.1
output/android/openssl-android-x86_64/lib/: libcrypto.so.1.1  libssl.so.1.1
output/ios/curl-ios-arm64/lib/: libcurl.la
output/ios/curl-ios-armv7/lib/: libcurl.la
output/ios/curl-ios-armv7s/lib/: libcurl.la
output/ios/curl-ios-i386/lib/: libcurl.la
tools/: _shared.sh  build-android-common.sh  build-android-curl.sh  build-android-lz4.sh  build-android-nghttp2.sh  build-android-openssl-all.sh  build-android-openssl.sh  build-android-rsync.sh  build-android-xxhash.sh  build-android-zstd.sh  build-common.sh  build-curl4android.sh  build-curl4ios.sh  build-ios-common.sh  build-ios-curl.sh  build-ios-nghttp2.sh  build-ios-openssl.sh  build-macos-common.sh  build-macos-curl.sh  build-macos-nghttp2.sh  build-macos-openssl.sh  build-openssl4android.sh  build-openssl4ios.sh  build-openssl_111_4android.sh  build-protobuf4android.sh
(+2397 files in other folders)
